--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
             <select name="dropdown">
                 <option value="contato">Deixar meu site mais bonito</option>
             </select>
+            <button id="botaoVT">Validar tópico</button>
         </div>
 
         <div>
             <label for="texto">Escolha um valor</label>
-            <input type="text" name="valor">
+            <input type="number" name="valor">
         </div>
-        
+        <button id="botaoVV">Validar valor</button>
+    
         <div>
             <label for="texto">Comentário</label>
             <input type="text" name="valor">
