--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
         </div>
 
         <div>
-            <label for="texto">Selecione um tópico</label>
+            <label for="texto">Selecione sua escolaridade</label>
             <select name="dropdown">
-                <option value="contato">Deixar meu site mais bonito</option>
+                <option value="contato">Ensino médio completo</option>
+                <option value="contato">Ensino Superior Incompleto</option>
+                <option value="contato">Ensino Superior cursando</option>
+                <option value="contato">Ensino Superior Completo</option>
             </select>
             <button id="botaoVT">Validar tópico</button>
         </div>
 
         <div>
-            <label for="texto">Escolha um valor</label>
+            <label for="texto">Selecione sua idade</label>
             <input type="number" name="valor">
         </div>
         <button id="botaoVV">Validar valor</button>
